[project]
name = "movie-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Gunner357911",email = "gunyuritv7@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.53.1,<2.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "movie-app"
version = "0.1.0"
description = ""
authors = ["you"]

package-mode = false
